<resources>
    <string name="app_name">Random Image Creator</string>

    <!-- Create images  -->
    <string name="image_creator_option_amount_hint">Amount</string>
    <string name="image_creator_option_width_hint">Width</string>
    <string name="image_creator_option_height_hint">Height</string>
    <string name="image_creator_option_pattern_hint">Pattern</string>
    <string name="image_creator_option_image_file_format_hint">Format</string>
    <string name="image_creator_option_iterations_hint">Iterations</string>
    <string name="image_creator_option_invalid">Value missing</string>
    <string name="image_creator_option_invalid_not_dividable_by_3">Value not dividable by 3</string>
    <string name="image_creator_option_invalid_not_equal">Width and height should be equal values</string>
    <string name="image_creator_button_create">Create</string>

    <!-- Creating images -->
    <string name="loading_saved_amount">Saved %d of %d images to your device</string>
    <string name="back_press_warning">Image creation in progress</string>

    <!-- Created images  -->
    <string name="created_images_location">The created images can be found in the directory \"%1$s\"</string>

    <!-- Choose save directory -->
    <string name="choose_save_directory_message">Choose directory for storing images</string>
    <string name="choose_save_directory_button">Select new directory</string>
    <string name="choose_save_directory_reuse">Reuse %1$s</string>
    <string name="created_images_amount">Amount</string>
    <string name="created_images_pattern">Pattern</string>
    <string name="created_images_duration">Duration</string>
    <string name="created_images_duration_value">%s seconds</string>
    <string name="created_images_title">Finished!</string>
    <string name="created_images_directory">Directory</string>

    <!-- Creators -->
    <string name="image_creator_solid">Solid</string>
    <string name="image_creator_pixelated">Pixelated</string>
    <string name="image_creator_mandelbrot">Mandelbrot</string>
    <string name="image_creator_sierpinski">Sierpinski carpet</string>
    <string name="image_creator_vicsek">Vicsek</string>
    <string name="error_title">An error occurred :(</string>
    <string name="error_instructions">Please try it again with a different configuration</string>
</resources>
