<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/created_images_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/created_images_title"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="8dp" />

    <TableLayout
        android:id="@+id/created_images_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/created_images_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="8dp"
        android:stretchColumns="1,2">

        <TableRow>
            <TextView
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/created_images_amount" />
            <TextView
                android:id="@+id/created_images_amount"
                android:layout_column="2"
                android:textSize="16sp"
                tools:text="5" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/created_images_pattern" />
            <TextView
                android:id="@+id/created_images_pattern"
                android:layout_column="2"
                android:textSize="16sp"
                tools:text="Mandelbrot"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/created_images_directory" />
            <TextView
                android:id="@+id/created_images_directory"
                android:layout_column="2"
                android:textSize="16sp"
                tools:text="DCIM"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/created_images_duration" />
            <TextView
                android:id="@+id/created_images_duration"
                android:layout_column="2"
                android:textSize="16sp"
                tools:text="60" />
        </TableRow>
    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_created_images"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/created_images_details" />
</androidx.constraintlayout.widget.ConstraintLayout>
